<resources>
    <string name="app_name">HackForums</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_gauth">Gauth (if enabled)</string>
    <string name="prompt_captcha">Captcha required</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_gauth">Sign in</string>
    <string name="action_captcha">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="captcha_code">Enter text in image</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_incorrect_gauth">Bad 2-Factor Authentication code.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forum_display">ForumDisplayActivity</string>
    <string name="title_activity_thread_display">ThreadDisplayActivity</string>
    <string name="title_activity_inbox_display">InboxDisplayActivity</string>
    <string name="title_activity_pm_display">PMDisplayActivity</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_reputation">ReputationActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_lightbox">LightboxActivity</string>
</resources>
